# com760cw2-group5

./: .gitignore  README.md  SETUP.md  docker-compose.yml
docker/: Dockerfile  start.sh  vnc_xstartup
src/com760cw2_group5/: CMakeLists.txt  README.md  package.xml
src/com760cw2_group5/launch/: bug2_navigation.launch
src/com760cw2_group5/msg/: RobotStatus.msg
src/com760cw2_group5/scripts/: FollowWall.py  GoToPoint.py  bug2.py  reset_run.py
src/com760cw2_group5/srv/: SetBugStatus.srv  SwitchBehavior.srv
src/com760cw2_group5/urdf/: group5Bot.urdf
src/com760cw2_group5/world/: group5.world
src/provided-code/: FollowWall.py  GoToPoint.py  com760Bot.urdf  com760World.world
